feat: animations and upload

--- a/emotisense.ai/src/components/Home.css
+++ b/emotisense.ai/src/components/Home.css
@@ -11,7 +11,25 @@
   height: 100%;
   overflow: hidden;
   background-color: #0093E9;
-  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 75%);  
+  background: linear-gradient(-45deg, #0093E9, #80D0C7, rgb(16, 86, 130));
+  background-size: 400% 400%;
+  /* background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 75%);   */
+  /* background-image: linear-gradient(160deg, red 0%, blue 75%); */
+  animation: gradience 8s ease infinite;
+}
+
+@keyframes gradience {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 .input-div {
@@ -75,26 +93,64 @@
   
 }
 
+@property --angle {
+  syntax: '<angle>';
+  initial-value: 90deg;
+  inherits: true;
+}
+
+@property --gradX {
+  syntax: '<percentage>';
+  initial-value: 50%;
+  inherits: true;
+}
+
+@property --gradY {
+  syntax: '<percentage>';
+  initial-value: 0%;
+  inherits: true;
+}
+
+:root {
+    --d: 2500ms;
+	--angle: 90deg;
+	--gradX: 100%;
+	--gradY: 50%;
+	--c1: rgba(168, 239, 255, 1);
+	--c2: rgba(168, 239, 255, 0.1);
+}
+
+.form-container {
+    width: 100%;
+    text-align: center;
+    align-items: center;
+    align-self: center;
+    align-content: center;
+}
+
 .input-div {
   margin-top: 20px;  
-  position: relative;
-  width: 100px;
+  width: 200px;
   height: 50px;
   border-radius: 5%;
-  border: 2px solid rgb(4, 4, 202);
+  border: 2px solid transparent;
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
-  box-shadow: 0px 0px 100px rgb(4, 4, 202) , inset 0px 0px 10px rgb(4, 4, 202),0px 0px 5px rgb(255, 255, 255);
-  animation: flicker 2s linear infinite;
+  margin-left: auto;
+  margin-right: auto;
+  animation: initialise forwards 3s, flicker 1s alternate-reverse infinite;
+  animation-delay: 1s;
+
 }
 
 .icon-upload {
-  color: rgb(4, 4, 202);
+  color: rgb(0, 0, 139);
+  opacity: 0%;
   font-size: 2rem;
   cursor: pointer;
-  animation: iconflicker 2s linear infinite;
+  animation: iconflicker 4s linear infinite;
+  animation-delay: 1s;
 }
 
 .input {
@@ -104,19 +160,29 @@
   height: 100%;
   cursor: pointer !important;
 }
-/* 
+
+@keyframes initialise {
+    from {
+        opacity: 0%;
+    }
+
+    to {
+        opacity: 100%;
+    }
+}
+
 @keyframes flicker {
-  0% {
+  /* 0% {
     border: 2px solid rgb(4, 4, 202);
     box-shadow: 0px 0px 100px rgb(4, 4, 202) , inset 0px 0px 10px rgb(4, 4, 202),0px 0px 5px rgb(255, 255, 255);
   }
-
+/* 
   5% {
     border: none;
     box-shadow: none;
-  }
+  } */
 
-  10% {
+  /* 10% {
     border: 2px solid rgb(4, 4, 202);
     box-shadow: 0px 0px 100px rgb(4, 4, 202) , inset 0px 0px 10px rgb(4, 4, 202),0px 0px 5px rgb(255, 255, 255);
   }
@@ -131,10 +197,26 @@
     box-shadow: 0px 0px 100px rgb(4, 4, 202) , inset 0px 0px 10px rgb(4, 4, 202),0px 0px 5px rgb(255, 255, 255);
   }
 
-  100% {
+  25% {
     border: 2px solid rgb(4, 4, 202);
     box-shadow: 0px 0px 100px rgb(4, 4, 202) , inset 0px 0px 10px rgb(4, 4, 202),0px 0px 5px rgb(255, 255, 255);
   }
+
+  100% {
+    border: 2px solid rgb(4, 4, 202);
+    box-shadow: 0px 0px 100px rgb(4, 4, 202) , inset 0px 0px 10px rgb(4, 4, 202),0px 0px 5px rgb(255, 255, 255);
+  } */
+
+    from {
+        border: 2px solid rgb(0, 0, 139);
+        box-shadow: 0px 0px 10px rgb(0, 0, 139) , inset 0px 0px 10px rgb(0, 0, 139),0px 0px 5px rgb(255, 255, 255);
+        transform: translateY(0px);
+    }
+
+    to {
+        border: 2px solid rgb(0, 0, 139);
+        transform: translateY(-5px);
+    }
 }
 
 @keyframes iconflicker {
@@ -150,18 +232,18 @@
     opacity: 1;
   }
 
-  25% {
+  15% {
     opacity: 0.2;
   }
 
-  30% {
+  20% {
     opacity: 1;
   }
 
   100% {
     opacity: 1;
   }
-} */
+}
 
 
 .button-submit {
