--- a/emotisense.ai/src/components/Home.css
+++ b/emotisense.ai/src/components/Home.css
@@ -122,6 +122,8 @@
     align-items: center;
     align-self: center;
     align-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .input-div {
@@ -260,8 +262,9 @@
   box-sizing: border-box;
   position: absolute;
   opacity: 0;
-  width: 100%;
-  height: 100%;
+  width: 200px;
+  height: 75px;
+  margin-bottom: 20px;
   cursor: pointer !important;
 }
 
@@ -375,3 +378,31 @@
   box-shadow: 0px 0px var(--main-color);
   transform: translate(3px, 3px);
 }
+
+.dropdown-container {
+  margin: 20px;
+}
+
+.dropdown {
+  width: 250px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  outline: none;
+  cursor: pointer;
+  background-color: #f5f5f5;
+  font-size: 16px;
+  color: #333;
+}
+
+.dropdown option {
+  background-color: #f5f5f5;
+  color: #333;
+}
+
+/* Style for when dropdown is open */
+.dropdown:focus {
+  border-color: #007bff;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
